Ensure package.json is tracked

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://sesiyuh.github.io/ProjectPortfolio",
+  "engines": {
+  "node": "18.16.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
